update css for large home section gap and fix about me css

--- a/portfolio-website-react-app/src/App.css
+++ b/portfolio-website-react-app/src/App.css
@@ -275,7 +275,20 @@ p {
         flex-direction: column-reverse;
         justify-content: center; /* Vertically centers content to prevent scrolling with height window adjustment */
          width: 100vw; /* Adjust width as needed */
-         height: 150vh; /* Adjust height as needed */
+         height: auto; /* Adjust height as needed */
+         padding: 50px;
+         margin: 0px;
+  }
+  .home-section-text {
+    margin-top: 550px;
+  }
+
+  .about-section {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding-top: 0;
+      padding-bottom: 0;
   }
 
   .home-section-greeting,
@@ -284,14 +297,21 @@ p {
       padding-right: 20%; /* Relative padding */
   }
 
+  .about-section-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 40px;
+  }
+
   .home-section-model > model {
     width: 100%;
     height: 100%;
   }
 
-.btn-contact {
-  margin-top: 0px; /* Add margin to separate button from text */
-}
+  .btn-contact {
+      margin-top: 0px; /* Add margin to separate button from text */
+  }
 
   .canvas-container {
       position: absolute;
